@@ -2,10 +2,13 @@ package org.goobi.vocabulary;
 
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 
 import javax.xml.bind.annotation.XmlRootElement;
 
+import org.apache.commons.lang.StringUtils;
 import org.goobi.beans.DatabaseObject;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
@@ -31,6 +34,9 @@ public class Vocabulary implements Serializable, DatabaseObject {
     private List<Definition> struct = new ArrayList<>();
 
     @JsonIgnore
+    private List<VocabRecord> filteredRecords = new ArrayList<>();
+
+    @JsonIgnore
     private String url;
 
     @Override
@@ -38,10 +44,14 @@ public class Vocabulary implements Serializable, DatabaseObject {
     }
 
     @JsonIgnore
+    @Deprecated
     private String mainFieldName;
+
     @JsonIgnore
+    @Deprecated
     private String searchField;
     @JsonIgnore
+    @Deprecated
     private String order; // blank, ASC, DESC
     @JsonIgnore
     private int totalNumberOfRecords;
@@ -52,9 +62,19 @@ public class Vocabulary implements Serializable, DatabaseObject {
     @JsonIgnore
     private int pageNo = 0;
 
+    @JsonIgnore
+    private String sortfield = "idAsc";
+    @JsonIgnore
+    private boolean sortOrder;
+    @JsonIgnore
+    private Integer internalSortField;
+
+    @JsonIgnore
+    private String searchValue;
+
     public int getLastPageNumber() {
-        int ret = new Double(Math.floor(this.records.size() / numberOfRecordsPerPage)).intValue();
-        if (this.records.size() % numberOfRecordsPerPage == 0) {
+        int ret = Double.valueOf(Math.floor(filteredRecords.size() / numberOfRecordsPerPage)).intValue();
+        if (filteredRecords.size() % numberOfRecordsPerPage == 0) {
             ret--;
         }
         return ret;
@@ -69,7 +89,7 @@ public class Vocabulary implements Serializable, DatabaseObject {
     }
 
     public boolean hasNextPage() {
-        return this.records.size() > numberOfRecordsPerPage;
+        return filteredRecords.size() > numberOfRecordsPerPage;
     }
 
     public boolean hasPreviousPage() {
@@ -85,16 +105,31 @@ public class Vocabulary implements Serializable, DatabaseObject {
     }
 
     public int getSizeOfList() {
-        return records.size();
+        return filteredRecords.size();
     }
 
     public List<VocabRecord> getPaginatorList() {
         List<VocabRecord> subList = new ArrayList<>();
-
-        if (records.size() > (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage) {
-            subList = records.subList(pageNo * numberOfRecordsPerPage, (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage);
+        filteredRecords.clear();
+        if (StringUtils.isNotBlank(searchValue)) {
+            for (VocabRecord rec : records) {
+                for (Field f : rec.getMainFields()) {
+                    if (StringUtils.isNotBlank(f.getValue())) {
+                        if (f.getValue().toLowerCase().contains(searchValue.toLowerCase())) {
+                            filteredRecords.add(rec);
+                            break;
+                        }
+                    }
+                }
+            }
         } else {
-            subList = records.subList(pageNo * numberOfRecordsPerPage, records.size());
+            filteredRecords = new ArrayList<>(records);
+        }
+
+        if (filteredRecords.size() > (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage) {
+            subList = filteredRecords.subList(pageNo * numberOfRecordsPerPage, (pageNo * numberOfRecordsPerPage) + numberOfRecordsPerPage);
+        } else {
+            subList = filteredRecords.subList(pageNo * numberOfRecordsPerPage, filteredRecords.size());
         }
 
         return subList;
@@ -160,4 +195,64 @@ public class Vocabulary implements Serializable, DatabaseObject {
         return null;
         //        return this.pageNo + 1;
     }
+
+    public List<Definition> getMainFields() {
+        List<Definition> answer = new ArrayList<>();
+        for (Definition def : struct) {
+            if (def.isTitleField()) {
+                answer.add(def);
+            }
+        }
+        return answer;
+    }
+
+    public void changeOrder() {
+        String field = null;
+        if (sortfield.endsWith("Asc")) {
+            field = sortfield.replace("Asc", "");
+            sortOrder = true;
+        } else {
+            field = sortfield.replace("Desc", "");
+            sortOrder = false;
+        }
+
+        if (field.equals("id")) {
+            internalSortField = null;
+        } else {
+            internalSortField = Integer.parseInt(field);
+        }
+        Collections.sort(records, recordComparator);
+    }
+
+    private Comparator<VocabRecord> recordComparator = new Comparator<VocabRecord>() {
+
+        @Override
+        public int compare(VocabRecord o1, VocabRecord o2) {
+            if (internalSortField == null) {
+                if (sortOrder) {
+                    return o1.getId().compareTo(o2.getId());
+                } else {
+                    return o2.getId().compareTo(o1.getId());
+                }
+            }
+            String value1 = null, value2 = null;
+
+            for (Field f : o1.getFields()) {
+                if (f.getDefinition().getId().intValue()==internalSortField.intValue()) {
+                    value1 = f.getValue().toLowerCase();
+                }
+            }
+            for (Field f : o2.getFields()) {
+                if (f.getDefinition().getId().intValue()==internalSortField.intValue()) {
+                    value2 = f.getValue().toLowerCase();
+                }
+            }
+            if (sortOrder) {
+                return value1.compareTo(value2);
+            } else {
+                return value2.compareTo(value1);
+            }
+        }
+    };
+
 }
